--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "express": "^5.2.1",
     "mongoose": "^9.2.2",
     "moongoose": "^0.0.5",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.3.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.6",
-    "@types/node": "^25.3.1",
+   
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
